Fixed overflowing urls

--- a/newsnerdjobs/jobs.css
+++ b/newsnerdjobs/jobs.css
@@ -16,8 +16,6 @@ a:hover {
 #jobs-list {
     width: 100%;
     margin: 0;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
 }
 
 #title {
@@ -38,6 +36,9 @@ a:hover {
 
 table {
     width: 100%;
+    /*word-wrap: break-word;*/
+    /*word-break: break-all;*/
+    /*table-layout: fixed;*/
 }
 
 th {
@@ -46,13 +47,18 @@ th {
     /*border: solid 1px gray;*/
     border-top: solid 1px gray;
     border-bottom: solid 1px gray;
-    text-align: left;
 }
 
 th.detail {
     width: 10%;
     font-weight: bold;
     text-align: right;
+}
+
+th.value {
+    text-align: left;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .organization {
